Full docker verse
